feat: learn and unlearn on the course cards
